0.6.5/_sources/developers/contributing/index.md
(napari-contributing)=
# Contributing guide

We welcome your contributions! Here you will find a guide to the contribution
workflow and tips for contributing to napari.
If you are looking to learn more about the napari code base, see the [napari architecture guide](architecture-index).
Please [contact](contact) us if you have any queries.

```{note}
To contribute to our blog, the [Island Dispatch](https://napari.org/island-dispatch), check out https://github.com/napari/island-dispatch.
```

## Contributing workflow

napari development occurs primarily on GitHub. If you are new to GitHub we recommend checking out the detailed [Github Docs](https://docs.github.com/en).

### Set up a local development environment

The first step to make changes to napari is to
set up a [napari development installation](dev-installation).

### Make changes and submit a pull request

You can then use git to save your changes and open a
[pull-request](https://docs.github.com/en/get-started/exploring-projects-on-github/contributing-to-a-project) (PR) via the following steps:

1. Make and save your changes:

Create a new feature branch:
```sh
git checkout main -b your-branch-name
```

`git` will automatically detect changes to a repository.
You can view them with:
```sh
git status
```

Add and commit your changed files:
```sh
git add my-file-or-directory
git commit -m "my message"
```

Each commit you make must have a [GitHub-registered email](https://github.com/settings/emails)
as the `author`. You can read more [here](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/setting-your-commit-email-address).

To set it, use `git config --global user.email your-address@example.com`.

2. Share your changes:

To push the local changes in your new feature branch to your
[forked](https://docs.github.com/en/get-started/exploring-projects-on-github/contributing-to-a-project#forking-a-repository) repository:

```sh
git push -u origin your-branch-name
```

Note we are pushing to the remote named 'origin' above. If you have followed the
[development installation instructions](dev-installation), 'origin' would be the name
of the remote of your forked repository. If you are unsure
of the name of your remotes, you can use the following command to check and
ensure you are pushing to the correct remote:

```sh
git remote -vv
```

You can then make a
[PR](https://docs.github.com/en/get-started/exploring-projects-on-github/contributing-to-a-project#making-a-pull-request) to `napari`'s `main` branch.

### Respond to pull request review

Continuous integration will provide initial feedback on your PR by running the
tests and code quality checks. Please correct any errors found by the automated tests.

Core team members and community members will review your suggested changes and
provide feedback. Your next step would be to make any necessary updates to
your PR.

### Acceptance of the pull request

After a core team member approves your PR, the PR will be merged into the main codebase.

## Contribution guides

Contributions can be made in different areas of the project.
These guides should help you begin contributing to a specific project area.

### Documentation

See [](contributing-docs) for information on how to contribute documentation.

### UI

#### Icons

If you want to add a new icon to the app, make the icon in whatever program you
like and add it to `napari/resources/icons/`.  Icons must be in `.svg` format.

Icons are automatically built into a Qt resource file that is imported when
napari is run.  If you have changed the icons and would like to force a rebuild
of the resources, then you can either delete the autogenerated
`napari/resources/_qt_resources*.py` file, or you can set the
`NAPARI_REBUILD_RESOURCES` environmental variable to a truthy value, for
example:

```sh
export NAPARI_REBUILD_RESOURCES=1
```

Icons are typically used inside of one of our `stylesheet.qss` files, with the
`{{ id }}` variable used to expand the current theme name.

```css
QtDeleteButton {
   image: url("theme_{{ id }}:/delete.svg");
}
```

#### Translations

Starting with version 0.4.7 offers the possibility of installing language packs,
enabling the user interface to be displayed in different languages. This means that all
user interface strings need to use the {func}`~napari.utils.translations.trans` helper
function.
See the [translations](translations) guide for more.

### API

If you are changing an existing API or adding a new one, make sure you update
the corresponding docstring to contain the `.. versionadded::` or
`.. versionchanged::` directive. For more information see the
[Sphinx documentation](https://www.sphinx-doc.org/en/master/usage/restructuredtext/directives.html#describing-changes-between-versions).
Please also consider documenting any major features/changes in our
[tutorials](tutorials) and other [usage documentation](usage).

### Tests

We use unit tests, integration tests, and functional tests to ensure that
napari works as intended. Writing tests for new code is a critical part of
keeping napari maintainable as it grows.

We have dedicated documentation on [testing](napari-testing) that we recommend you
read as you're working on your first contribution.

### Performance

Performance related PRs should include a benchmark in order to clearly depict the
use-case that is being optimized for. Ideally PRs that add a new feature should
also include benchmarks to show the new feature is not too slow but this is less vital.
[](napari-benchmarks) provides more information on benchmarking. If you find
poor performance, [profiling](profiling) and [performance monitoring](napari-perfmon) can help
identify the cause and where to optimize.

### Automation and CI

We use GitHub Actions to automate our continuous integration and project workflows.
The [`CONTRIBUTING.md` doc in the `.github` directory](https://github.com/napari/napari/blob/main/.github/CONTRIBUTING.md)
highlights basics about the GitHub Actions used in the project.

We also automate [deployment of our documentation and website](https://napari.org/stable/developers/contributing/documentation/docs_deployment.html).


